--- a/src/components/HTMLViewer/HTMLViewer.scss
+++ b/src/components/HTMLViewer/HTMLViewer.scss
@@ -27,14 +27,15 @@
 
   &__textarea {
     width: 100%;
-    height: 100%;
     border: none;
     border-radius: 2px;
+    border-top-left-radius: 0;
     background-color: #b0b0b0;
     padding: 20px;
     box-sizing: border-box;
     overflow: auto;
     resize: none;
+    flex-grow: 1;
   }
 
   &__copy-button {
@@ -43,8 +44,8 @@
     padding: 5px 8px;
     border-radius: 3px;
     position: absolute;
-    bottom: 50px;
-    right: 50px;
+    bottom: 20px;
+    right: 20px;
     background: #fff;
     cursor: pointer;
 
@@ -62,5 +63,27 @@
     background: transparent;
     appearance: none;
     cursor: pointer;
+  }
+
+  &__preview-pane-tab {
+    background-color: #b0b0b0;
+    padding: 8px 12px;
+    font-weight: bold;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+  }
+
+  &__preview-pane {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  &__preview-panes-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    height: 100%;
   }
 }
